[package]
name = "tsens-test"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
]}

esp-hal = { version = "0.21.1", features = [
    "esp32c3",
] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
log = { version = "0.4.22" }
esp-alloc = { version = "0.5.0" }
embassy-executor = { version = "0.6.3",  features = [
    "task-arena-size-12288",
] }
embassy-time     = { version = "0.3.2",  features = ["generic-queue-8"] }
esp-hal-embassy  = { version = "0.4.0",  features = ["esp32c3"] }
static_cell      = { version = "2.1.0",  features = ["nightly"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
